# taj

./: Cargo.toml  LICENSE  README.md  binutils.taj  gcc.taj  glibc-utilities.taj  glibc.taj  linux.taj  systemd.taj
src/: build.rs  cli.rs  config.rs  detect.rs  git.rs  install.rs  main.rs  state.rs  tajfile.rs  util.rs
