[package]
name = "taj"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
toml = "0.8"
walkdir = "2.5"
which = "6.0"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
